--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -43,10 +43,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    <RelativeLayout
+    <LinearLayout
         android:id="@+id/driverDetailsRLL"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
 
         <android.support.v7.widget.CardView
             android:id="@+id/cvDriverInfo"
@@ -398,6 +400,26 @@
                     android:text="@string/settings"
                     android:background="@color/bgColor"/>
 
+                <TextView
+                    android:id="@+id/tvDocuments"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="15dp"
+                    android:paddingEnd="20dp"
+                    android:paddingStart="20dp"
+                    android:paddingTop="15dp"
+                    style="@style/TextNormal"
+                    android:text="@string/documents"
+                    android:background="?attr/selectableItemBackground"
+                    />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginStart="20dp"
+                    android:layout_marginEnd="20dp"
+                    android:background="@color/dividerColor"/>
+
+
                 <android.support.v7.widget.SwitchCompat
                     android:id="@+id/switchNavigation"
                     style="@style/TextNormal"
@@ -411,7 +433,8 @@
                     android:theme="@style/ThemeSwitch"
                     />
 
-                <ImageView
+                <View
+                    android:id="@+id/ivDivNavigation"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginStart="20dp"
@@ -434,7 +457,7 @@
 
         </android.support.v7.widget.CardView>
 
-    </RelativeLayout>
+    </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
 
