app name updated, fugu msg notification icon updated

--- a/JugnooNewDriver/jugnooNewDriver/src/jingos/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/jingos/res/values/values-wl.xml
@@ -18,7 +18,7 @@
 
 
     <string name="appname">Jingos</string>
-    <string name="app_name">Jingos Drivers</string>
+    <string name="app_name">Jingos Driver</string>
 
     <!--White Label Key-->
     <string name="white_label_key">839f5be8cced4d17ad3e6264762136fe</string>
