profile_options: Api names changed, login object parsed

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -470,6 +470,7 @@
                     android:background="@color/bgColor"/>
 
                 <LinearLayout
+                    android:id="@+id/layoutVehicleServiceDetails"
                     android:paddingBottom="15dp"
                     android:paddingEnd="20dp"
                     android:paddingStart="20dp"
@@ -490,7 +491,6 @@
                     <TextView
                         android:id="@+id/tvServiceType"
                         style="@style/TextNormal"
-                        android:textStyle="bold"
                         android:gravity="end"
                         android:layout_gravity="end"
                         android:drawablePadding="5dp"
