--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_end.xml
@@ -40,7 +40,7 @@
                 android:background="@color/colorPrimary">
 
                 <TextView
-                    android:id="@+id/textViewRideInstructions"
+                    android:id="@+id/tvRideEndID"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/Invoice"
