--- a/JugnooNewDriver/jugnooNewDriver/src/aran/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/aran/res/values/values-wl.xml
@@ -100,6 +100,8 @@
     <!--Color for graph-->
     <color name="driverEarningHighLisghtColor">@color/colorPrimary</color>
 
+    <string name="currency_fallback">INR</string>
+
 
     <!--resValue "color", 'red_v2', "#000000"-->
     <!--resValue "color", 'red_v2_fadded', "#90000000"-->
