--- a/JugnooNewDriver/jugnooNewDriver/src/nickelride/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/nickelride/res/values/values-wl.xml
@@ -113,4 +113,5 @@
     <string name="profile_monthly_earnings_text">@string/monthly_text_tips</string>
     <string name="currency_fallback">USD</string>
     <bool name="vehicle_model_enabled">false</bool>
+    <bool name="show_end_ride_custom_text">false</bool>
 </resources>
