--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_driver_documents.xml
@@ -1,57 +1,42 @@
-<RelativeLayout android:id="@+id/relative"
-                xmlns:android="http://schemas.android.com/apk/res/android"
-                xmlns:tools="http://schemas.android.com/tools"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@color/white">
+<android.support.constraint.ConstraintLayout
+    android:id="@+id/relative"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/white_light_more_grey"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <RelativeLayout
+    <include layout="@layout/layout_top_bar"
+             android:id="@+id/layout_top_bar"
+             android:layout_width="match_parent"
+             android:layout_height="50dp"
+             app:layout_constraintTop_toTopOf="parent"
+        />
+
+    <LinearLayout
+        android:id="@+id/fragment"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/layout_top_bar"
+        app:layout_constraintBottom_toTopOf="@+id/submitButton"
+        >
 
-        <include layout="@layout/layout_top_bar"/>
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="6px"
-            android:background="@drawable/shadow_down"
-            android:layout_below="@+id/topRl"
-            />
-
-        <LinearLayout
-            android:id="@+id/fragment"
-            android:layout_below="@+id/topRl"
-            android:layout_above="@+id/submitButton"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white_light_more_grey"
-            android:orientation="vertical">
-
-        </LinearLayout>
+    </LinearLayout>
 
 
-        <Button
-            android:id="@+id/submitButton"
-            android:layout_width="640px"
-            android:layout_height="80px"
-            android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="15px"
-            android:layout_marginTop="4px"
-            android:background="@drawable/orange_btn_selector"
-            android:text="@string/Submit"
-            android:textColor="@drawable/white_color_selector"
-            android:textSize="@dimen/button_text_size"/>
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="320dp"
+        android:layout_height="40dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginBottom="7dp"
+        android:layout_marginTop="7dp"
+        android:background="@drawable/orange_btn_selector"
+        android:text="@string/Submit"
+        android:textColor="@drawable/white_color_selector"
+        android:textSize="16sp"/>
 
-        <RelativeLayout
-            android:id="@+id/relativeLayoutContainer"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/white"
-            android:visibility="gone">
-
-        </RelativeLayout>
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
