--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_list.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_list.xml
@@ -7,8 +7,8 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
-        android:layout_width="140px"
-        android:layout_height="140px"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_centerInParent="true"
         />
 
@@ -31,6 +31,6 @@
         android:gravity="center"
         android:text="@string/no_missed_rides_currently"
         android:textColor="@color/black"
-        android:textSize="@dimen/button_text_size" />
+        android:textSize="16sp" />
 
 </RelativeLayout>
