--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/document_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/document_details.xml
@@ -1,15 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true">
 
-    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/parentView"
+
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
+        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            android:id="@+id/parentView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+        <TextView
+            android:id="@+id/labelImages"
+            style="@style/TextNormal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="20dp"
+            android:text="@string/add_image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/parentView" />
+
+        <ImageView
+            android:id="@+id/docImage1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@string/add_image"
+            android:src="@drawable/ic_addimage"
+            app:layout_constraintStart_toStartOf="@id/labelImages"
+            app:layout_constraintTop_toBottomOf="@id/labelImages" />
+
+        <ImageView
+            android:id="@+id/deleteImage1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:contentDescription="@string/add_image"
+            android:src="@drawable/orange_cross"
+            app:layout_constraintEnd_toEndOf="@id/docImage1"
+            app:layout_constraintTop_toTopOf="@id/docImage1" />
+
+        <ImageView
+            android:id="@+id/docImage2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:contentDescription="@string/add_image"
+            android:src="@drawable/ic_addimage"
+            app:layout_constraintStart_toEndOf="@id/docImage1"
+            app:layout_constraintTop_toBottomOf="@id/labelImages" />
+
+        <ImageView
+            android:id="@+id/deleteImage2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:contentDescription="@string/add_image"
+            android:src="@drawable/orange_cross"
+            app:layout_constraintEnd_toEndOf="@id/docImage2"
+            app:layout_constraintTop_toTopOf="@id/docImage2" />
+
+
+        <android.support.constraint.Group
+            android:id="@+id/groupImagesUpload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="visible"
+            app:constraint_referenced_ids="labelImages,docImage1,docImage2,deleteImage1,deleteImage2" />
 
 
     </android.support.constraint.ConstraintLayout>
