feat_doc_fields: checks handled

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/document_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/document_details.xml
@@ -11,11 +11,11 @@
         android:layout_height="wrap_content">
 
 
-        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.constraint.ConstraintLayout
+            xmlns:android="http://schemas.android.com/apk/res/android"
             android:id="@+id/parentView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_height="wrap_content" />
 
 
         <TextView
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginTop="20dp"
-            android:text="@string/add_image"
+            android:text="@string/add_images_label"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/parentView" />
 
@@ -33,6 +33,7 @@
             android:id="@+id/addImageLayout"
             android:layout_width="95dp"
             android:layout_height="95dp"
+            android:layout_marginTop="10dp"
             android:contentDescription="@string/add_image"
             android:src="@drawable/ic_addimage"
             app:layout_goneMarginStart="20dp"
@@ -56,6 +57,7 @@
             android:layout_marginStart="10dp"
             android:contentDescription="@string/add_image"
             android:src="@drawable/ic_addimage"
+            android:layout_marginTop="10dp"
             app:layout_constraintStart_toEndOf="@id/addImageLayout"
             app:layout_constraintTop_toBottomOf="@id/labelImages" />
 
@@ -69,13 +71,6 @@
             app:layout_constraintEnd_toEndOf="@id/addImageLayout2"
             app:layout_constraintTop_toTopOf="@id/addImageLayout2" />
 
-
-        <android.support.constraint.Group
-            android:id="@+id/groupImagesUpload"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:visibility="visible"
-            app:constraint_referenced_ids="labelImages,addImageLayout2,addImageLayout2,deleteImage1,deleteImage2" />
 
 
     </android.support.constraint.ConstraintLayout>
