feat_document_details: same convert view used as document list

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_top_bar.xml
@@ -24,6 +24,7 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:textAllCaps="true"
+        android:maxHeight="45dp"
         style="@style/TextTitle"
         android:autoSizeTextType="uniform"
         android:layout_toEndOf="@+id/backBtn"
