--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_rate_card.xml
@@ -54,12 +54,12 @@
         </LinearLayout>
 
         <RelativeLayout
+            android:id="@+id/rlBeforeRide"
             android:layout_width="match_parent"
             android:layout_height="140px"
             android:layout_marginStart="40px"
             android:layout_marginEnd="40px"
-            android:layout_marginBottom="20px"
-            android:gravity="center_vertical">
+            android:layout_marginBottom="20px">
 
             <product.clicklabs.jugnoo.driver.utils.CustomTextVeiw
                 android:id="@+id/textViewPickupCharges"
@@ -115,14 +115,14 @@
                 android:textColor="@color/textColor"
                 android:textSize="34px"/>
 
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="2px"
+                android:layout_alignParentBottom="true"
+                android:background="@color/dividerColor"/>
+
         </RelativeLayout>
 
-        <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="2px"
-        android:layout_marginStart="30px"
-        android:layout_marginEnd="30px"
-        android:background="@color/dividerColor"/>
 
 
         <LinearLayout
