f_edit_rate_card: edit rate cards ui, api, zoom hardcoding along with server keys

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activity_profile_screen.xml
@@ -398,6 +398,7 @@
                     style="@style/TextLarge"
                     android:gravity="center"
                     android:text="@string/settings"
+                    android:textStyle="bold"
                     android:background="@color/bgColor"/>
 
                 <TextView
