--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/activty_edit_driver_profile.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:id="@+id/activity_profile_screen"
+<RelativeLayout android:id="@+id/activity_profile_screen"
               xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:card_view="http://schemas.android.com/apk/res-auto"
               android:layout_width="match_parent"
@@ -10,21 +10,38 @@
               android:splitMotionEvents="false">
 
 
-    <include layout="@layout/layout_top_bar"/>
+    <include layout="@layout/layout_top_bar"
+        android:id="@+id/top_bar_layout"/>
 
 
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_below="@+id/top_bar_layout"
+        android:layout_above="@+id/bEditRateCard"
+        >
 
-        <RelativeLayout
-            android:id="@+id/driverDetailsRLL"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+
+            <android.support.v7.widget.CardView
+                android:id="@+id/cvProfileImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="20px"
+                android:layout_marginStart="20px"
+                android:layout_marginTop="24px"
+                card_view:cardBackgroundColor="@color/white"
+                card_view:cardCornerRadius="8dp"
+                card_view:cardElevation="3dp"
+                card_view:cardUseCompatPadding="true"
+                >
 
             <RelativeLayout
-                android:id="@+id/driverDetailsRL"
                 android:layout_width="match_parent"
                 android:layout_height="240px"
                 >
@@ -65,11 +82,13 @@
 
             </RelativeLayout>
 
+
+            </android.support.v7.widget.CardView>
+
             <android.support.v7.widget.CardView
                 android:id="@+id/cvInfoLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/driverDetailsRL"
                 android:layout_marginEnd="20px"
                 android:layout_marginStart="20px"
                 android:layout_marginTop="24px"
@@ -174,7 +193,6 @@
                 android:id="@+id/cvBankLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/cvInfoLayout"
                 android:layout_marginEnd="20px"
                 android:layout_marginStart="20px"
                 android:layout_marginTop="24px"
@@ -198,6 +216,7 @@
                         android:gravity="center"
                         android:text="@string/account_details"
                         style="@style/TextLarge"
+                        android:textStyle="bold"
                         />
 
 
@@ -363,9 +382,25 @@
 
 
 
-        </RelativeLayout>
+        </LinearLayout>
     </ScrollView>
 
+    <Button
+        android:id="@+id/bEditRateCard"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/orange_btn_selector"
+        android:text="@string/edit_rate_card"
+        android:textColor="@drawable/white_color_selector"
+        android:textSize="16sp"
+        android:tag="@string/dont_touch_me"
+        />
 
 
-</LinearLayout>
+
+</RelativeLayout>
