--- a/JugnooNewDriver/jugnooNewDriver/src/zoom/res/values/values-wl.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/zoom/res/values/values-wl.xml
@@ -78,6 +78,9 @@
     <integer name="show_call_in_otp">@integer/view_visible</integer>
     <integer name="splash_scene_bg_visibility">@integer/view_visible</integer>
     <bool name="vehicle_model_enabled">true</bool>
+    <integer name="show_edit_rate_card">1</integer>
+    <integer name="edit_profile_in_home_screen">1</integer>
+    <integer name="upload_documents_custom_text">1</integer>
 
 
 
